@@ -1,0 +1,4 @@
+nz-input-number {
+  height: 22px;
+  width: 5rem;
+}
