@@ -16,7 +16,7 @@
 </form>
 
 <div fxLayout="row wrap" fxLayoutGap="5px">
-  <nz-card nzTitle="Fleet design updater" nzSize="small" style="width: 200px">
+  <nz-card nzTitle="Fleet design updater" nzSize="small" style="width: 250px">
     <app-auto-fleet-up></app-auto-fleet-up>
   </nz-card>
   <nz-card nzTitle="Auto search" nzSize="small" style="width: 270px">
