@@ -1,6 +1,7 @@
 5/09/2020
 -   Districts percent info
 -   Buildings max buy
+-   Fleet updater max level
 
 3/09/2020
 -   Buy menu on top
